2015-03-12  Rasmus Pank Roulund  <emacs@pank.eu>

	* ido.el (ido-add-virtual-buffers-to-list): Include bookmark-alist
	files (bug#19335).

2015-03-12  Eli Zaretskii  <eliz@gnu.org>

	* international/fontset.el (script-representative-chars): Add a
	representative character for 'vai'.

2015-03-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/quail.el (quail-input-method):
	Use with-silent-modifications.

	* simple.el (goto-history-element): Don't burp on t history.

2015-03-10  Paul Eggert  <eggert@cs.ucla.edu>

	Prefer "initialize" to "initialise"
	* progmodes/js.el (js-indent-first-init):
	Rename from js-indent-first-initialiser, to avoid worrying about
	American vs British spelling.  All uses changed.

2015-03-10  Glenn Morris  <rgm@gnu.org>

	* progmodes/js.el (js-indent-first-initialiser):
	Fix doc, type, version.

2015-03-10  Jackson Ray Hamilton  <jackson@jacksonrayhamilton.com>

	* progmodes/js.el (js-indent-first-initialiser): New option.
	(js--maybe-goto-declaration-keyword-end): New function.
	(js--proper-indentation): Use js--maybe-goto-declaration-keyword-end.

2015-03-10  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* net/ldap.el (ldap-attribute-syntaxes-alist): Add LDAP attributes
	from RFC2798 Section 9.1.1.  (Bug#8983)

2015-03-09  Nicolas Petton <nicolas@petton.fr>

	* emacs-lisp/seq.el (seq-into): New function.
	Bump seq.el version to 1.3.

2015-03-09  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-font-lock-keywords): Don't consider
	`=' a part of symbol when followed by `>'.  (Bug#18644)
	(ruby-syntax-before-regexp-re): Detect regexps after `!'.
	(Bug#19285)

2015-03-09  Eli Zaretskii  <eliz@gnu.org>

	* dired.el (dired-delete-file): Doc fix.  (Bug#20021)

2015-03-06  Sergio Durigan Junior  <sergiodj@sergiodj.net>
	    Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* net/eudcb-bbdb.el (eudc-bbdb-field): New function.
	(eudc-bbdb-filter-non-matching-record): Call eudc-bbdb-field.